--- a/Code_core_3/plm-formalized/.gitignore
+++ b/Code_core_3/plm-formalized/.gitignore
@@ -1,1 +1,8 @@
-__pycache__/ *.pyc *.pyo .pytest_cache/ .dist/ build/ *.egg-info/ .venv/ 
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
+.dist/
+build/
+*.egg-info/
+.venv/
