--- a/Code_core_3/plm-formalized/pyproject.toml
+++ b/Code_core_3/plm-formalized/pyproject.toml
@@ -11,7 +11,10 @@ requires-python = ">=3.9"
 license = {file = "LICENSE"}
 authors = [{name = "Your Name"}]
 
-dependencies = []
+dependencies = [
+    "cirq",
+    "sympy",
+]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0"]
