Improve GPU probing/docs; add toy 3-SAT brute-force check

--- a/validation_np_hard/.gitignore
+++ b/validation_np_hard/.gitignore
@@ -3,5 +3,10 @@ report.json
 crash_report.json
 last_run.log
 
+# Local debug artifacts (do not commit)
+_pyver.txt
+_term_test.txt
+volq_smoke.log
+
 # Local clone(s) of volq-quantum for optional demo
 _deps/
