--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 # Don't recurse into backup directories or build artifacts that contain
 # duplicate or unrelated test files which cause import conflicts.
 # Adjust as needed if you want to include some of these into CI later.
-norecursedirs = .git .venv bak plm_bak Deploy/docker/plm-cirq
+norecursedirs = .git .venv bak plm_bak Deploy/docker/plm-cirq validation_np_hard/_deps
